@startuml
left to right direction

class User{
    id: Long
    userName: String
    password: String
    ecoPoints: double
}

class Trip {
    id: UUID
    distance: double
    avgSpeed: double
    avgEngineRotation: double
    date: Date
    rewardedEcoPoints: double
    carId: Long
}

class Brand {
    id: Long
    name: String
}

class Car {
    id: Long
    brandId: Long
    model: String
}

class CarData {
    id: Long
    longitude: double
    latitude: double
    currentEngineRPM: double
    currentVelocity: double
    throttlePosition: double
    engineRunTime: String
    timeStamp: Timestamp
    tripId: UUID
}

class CarDataEntry {
    longitude: double
    latitude: double
    currentEngineRPM: double
    currentVelocity: double
    throttlePosition: double
    engineRunTime: String
    timeStamp: Timestamp
    tripId: UUID
}


User "1" -- "*" Trip : > drives
CarData "*" -- "1"  Trip : < has
CarDataEntry -u-|> CarData
Trip "*" -- "1" Car : > driven with
Car "*" -- "1" Brand : < has
@enduml